--- a/public/peppertablet/index.html
+++ b/public/peppertablet/index.html
@@ -59,11 +59,11 @@
 	<div class='box' id='quiz'> 
 		<h1>The Quiz </h1>
 		<h2>Your score: 1</h2>
-		<h2>How old is he?</h2>
+		<h2>How old is the artist?</h2>
 		
 	</div>
 	<div class='box' id='learn'> 
-		<h1>You can ask me questions about him or I can read about him</h1>
+		<h1>You can ask me questions about the artist or I can read about the artist</h1>
 		<h2>Tell me what you want to do</h2>
 		<div>
 			<ul>
@@ -77,10 +77,10 @@
 		<h2>Some examples</h2>
 		<div>
 			<ul>
-				<li>How old is he?</li>
-				<li>Where was he born</li>
-				<li>Is he single?</li>
-				<li>How many kids do he have?</li>
+				<li>How old is the artist?</li>
+				<li>Where was the artist born</li>
+				<li>Is the artist single?</li>
+				<li>How many kids does the artist have?</li>
 			</ul>		
 		</div>
 	</div>
@@ -93,8 +93,7 @@
 				<li>Career</li>
 				<li>Artistry</li>
 				<li>Achievements</li>
-				<li>Discography</li>
-				<li>Discography</li>
+				<li>Albums</li>
 			</ul>		
 		</div>
 	</div>
