--- a/public/peppertablet/index.html
+++ b/public/peppertablet/index.html
@@ -58,7 +58,7 @@
 	</div>
 	<div class='box' id='quiz'> 
 		<h1>The Quiz </h1>
-		<h2>Your score: 1</h2>
+		<h2>Your score: <label id="score">0</label></h2>
 		<h2>How old is the artist?</h2>
 		
 	</div>
