ask question > questions

--- a/public/peppertablet/index.html
+++ b/public/peppertablet/index.html
@@ -23,7 +23,7 @@
 	<li><a href="#quiz" class="link" rel="quiz">Quiz</a></li>
 	<!-- <li><a href="#learn"  class="link" rel="learn">Learn more</a></li> -->
 	
-		<li><a href="#ask Questions" class="link" rel="ask">Ask Questions</a></li>
+		<li><a href="#questions" class="link" rel="questions">Questions</a></li>
 		<li><a href="#story" class="link" rel="story">Story</a></li>
 
 </ul>
@@ -38,7 +38,7 @@
 			<ul>
 				<li><a href="#listen" class="link2 link" rel="listen">Listen to some music</a></li>
 				<li><a href="#quiz" class="link2 link" rel="quiz">Do a quiz</a></li>
-				<li><a href="#ask Questions" class="link2 link" rel="ask">Ask some questions</a></li>
+				<li><a href="#questions" class="link2 link" rel="questions">Ask some questions</a></li>
 				<li><a href="#story" class="link2 link" rel="story">I can tell you more about the artist</a></li>
 				
 			</ul>		
@@ -67,12 +67,12 @@
 		<h2>Tell me what you want to do</h2>
 		<div>
 			<ul>
-				<li><a href="#ask Questions" class="link2 link" rel="ask">Ask Questions</a></li>
+				<li><a href="#questions" class="link2 link" rel="questions">Ask Questions</a></li>
 				<li><a href="#story" class="link2 link" rel="story">Story</a></li>
 			</ul>		
 		</div>
 	</div>
-	<div class='box' id='ask'> 
+	<div class='box' id='questions'> 
 		<h1>What do you want to ask me about?</h1>
 		<h2>Some examples</h2>
 		<div>
