autoplay and callable from pepper, css needs fix

--- a/public/peppertablet/index.html
+++ b/public/peppertablet/index.html
@@ -19,7 +19,8 @@
 <ul>
 
 	<a href="#startMenu"  class="link menutop" rel="startMenu">Suggested Topics</a>
-	<li><a href="#listen" class="link" rel="listen">Listen </a></li>
+	<li><a href="#listen" class="link" rel="listen">Play Music </a></li>
+<!-- 	<li><a href="#youtube" class="link" rel="youtube">Youtube </a></li> -->
 	<li><a href="#quiz" class="link" rel="quiz">Quiz</a></li>
 	<!-- <li><a href="#learn"  class="link" rel="learn">Learn more</a></li> -->
 	
@@ -53,6 +54,11 @@
 				<li><a href="https://www.youtube.com/watch?v=DksSPZTZES0">Cry Me a River</a></li>
 			</ul>		
 		</div>
+		
+		
+	</div>
+	<div class='box' id='youtube'> 
+		<!-- <iframe class="youtube" src="https://www.youtube.com/embed/tD4HCZe-tew?autoplay=1" frameborder="0" allowfullscreen></iframe> -->
 		
 		
 	</div>
