--- a/public/peppertablet/index.html
+++ b/public/peppertablet/index.html
@@ -26,6 +26,7 @@
 	
 		<li><a href="#questions" class="link" rel="questions">Questions</a></li>
 		<li><a href="#story" class="link" rel="story">Story</a></li>
+		<input type="button" value="test" onclick="test()">
 
 </ul>
 
