--- a/public/peppertablet/index.html
+++ b/public/peppertablet/index.html
@@ -18,8 +18,8 @@
 <div id="sidebar">
 <ul>
 
-	<a href="#startMenu"  class="link menutop" rel="startMenu">Suggested Topics</a>
-	<li><a href="#listen" class="link" rel="listen">Play Music </a></li>
+	<a href="#startMenu"  style="visability:hidden;" class="link menutop" rel="startMenu">Suggested Topics</a>
+	<li><a href="#listen" class="link" rel="listen">Song </a></li>
 <!-- 	<li><a href="#youtube" class="link" rel="youtube">Youtube </a></li> -->
 	<li><a href="#quiz" class="link" rel="quiz">Quiz</a></li>
 	<!-- <li><a href="#learn"  class="link" rel="learn">Learn more</a></li> -->
