--- a/public/peppertablet/index.html
+++ b/public/peppertablet/index.html
@@ -5,6 +5,7 @@
 <meta name="description" content="New Project" />
   <meta name="keywords" content="New Project" />
   <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>Pepper Tablet</title>
 <script src="https://code.jquery.com/jquery-1.11.1.min.js"></script>
 <link href="css.css" rel="stylesheet" type="text/css" />
@@ -17,8 +18,8 @@
 
 <div id="sidebar">
 <ul>
-
-	<a href="#startMenu"  style="visability:hidden;" class="link menutop" rel="startMenu">Suggested Topics</a>
+	<li style=" visibility: hidden;"  ></li>
+	<a href="#startMenu"  style= visibility: hidden;" class="link menutop" rel="startMenu">Suggested Topics</a>
 	<li><a href="#listen" class="link" rel="listen">Song </a></li>
 <!-- 	<li><a href="#youtube" class="link" rel="youtube">Youtube </a></li> -->
 	<li><a href="#quiz" class="link" rel="quiz">Quiz</a></li>
@@ -37,10 +38,10 @@
 		<h2>Lets talk about music! What do you want to do?</h2>
 		<div>
 			<ul>
-				<li><a href="#listen" class="link2 link" rel="listen">Listen to some music</a></li>
-				<li><a href="#quiz" class="link2 link" rel="quiz">Do a quiz</a></li>
-				<li><a href="#questions" class="link2 link" rel="questions">Ask some questions</a></li>
-				<li><a href="#story" class="link2 link" rel="story">I can tell you more about the artist</a></li>
+				<li>Listen to some music</a></li>
+				<li>Do a quiz</a></li>
+				<li>Ask some questions</a></li>
+				<li>Listen to a story about the artist</a></li>
 				
 			</ul>		
 		</div>
@@ -50,9 +51,14 @@
 		<h2>What song do you want to hear?</h2>
 		<div>
 			<ul>
-				<li><a href="https://www.youtube.com/watch?v=uuZE_IRwLNI"> Mirrors</a></li>
-				<li><a href="https://www.youtube.com/watch?v=DksSPZTZES0">Cry Me a River</a></li>
-			</ul>		
+				<li>Mirrors by Justin Timberlake</a></li>
+				<li>Cry Me a River by Justin Timberlake</li>
+				<li>Halo by Beyonce</li>
+				<li>Lush life by Zara Larsson</li>
+				<li>Single Ladies by Beyonce</li>
+				<li>It Aint My Fault by Zara Larsson</li>
+				<li>Uptown Funk by Bruno Mars</li>
+				</ul>		
 		</div>
 		
 		
