--- a/public/peppertablet/index.html
+++ b/public/peppertablet/index.html
@@ -35,7 +35,7 @@
 	
 	<div class='box' id='startMenu'>  
 		<h1>Suggested Topics</h1>
-		<h2>Lets talk about music! What do you want to do?</h2>
+		<h2>Lets talk about music! <br> What do you want to do?</h2>
 		<div>
 			<ul>
 				<li>Listen to some music</a></li>
@@ -75,7 +75,7 @@
 		
 	</div>
 	<div class='box' id='learn'> 
-		<h1>You can ask me questions about the artist or I can read about the artist</h1>
+		<h1>You can ask me questions about the artist or <br> I can read about the artist</h1>
 		<h2>Tell me what you want to do</h2>
 		<div>
 			<ul>
@@ -98,7 +98,7 @@
 	</div>
 	<div class='box' id='story'> 
 		<h1>Story</h1>
-		<h2>What topic do you want to learn more about?</h2>
+		<h2>What topic do you want to learn more <br> about?</h2>
 		<div>
 			<ul>
 				<li>Early Life</li>
