<br> and youtube size

--- a/public/peppertablet/index.html
+++ b/public/peppertablet/index.html
@@ -85,7 +85,7 @@
 		</div>
 	</div>
 	<div class='box' id='questions'> 
-		<h1>What do you want to ask me about?</h1>
+		<h1>What do you want to ask <br> me about?</h1>
 		<h2>Some examples</h2>
 		<div>
 			<ul>
