quiz update no score

--- a/public/peppertablet/index.html
+++ b/public/peppertablet/index.html
@@ -70,7 +70,11 @@
 	</div>
 	<div class='box' id='quiz'> 
 		<h1>The Quiz </h1>
-		<h2>Your score: <label id="score">0</label></h2>
+		<ul>
+				<li>If you want to do something else, just say stop, to stop the quiz.</li>
+				<li>You can always ask me what your score is.</li>
+			</ul>	
+		<div style="display:none;" ><h2>Your score: <label id="score">0</label></h2></div>
 		
 		
 	</div>
