--- a/public/peppertablet/index.html
+++ b/public/peppertablet/index.html
@@ -71,7 +71,7 @@
 	<div class='box' id='quiz'> 
 		<h1>The Quiz </h1>
 		<ul>
-				<li>If you want to do something else, just say stop, to stop the quiz.</li>
+				<li>If you want to do something else, just say stop,<br> to stop the quiz.</li>
 				<li>You can always ask me what your score is.</li>
 			</ul>	
 		<div style="display:none;" ><h2>Your score: <label id="score">0</label></h2></div>
