--- a/public/peppertablet/index.html
+++ b/public/peppertablet/index.html
@@ -51,13 +51,14 @@
 		<h2>What song do you want to hear?</h2>
 		<div>
 			<ul>
-				<li>Mirrors by Justin Timberlake</a></li>
-				<li>Cry Me a River by Justin Timberlake</li>
-				<li>Halo by Beyonce</li>
+				<li>Mirrors by Justin Timberlake</li>
 				<li>Lush life by Zara Larsson</li>
-				<li>Single Ladies by Beyonce</li>
-				<li>It Aint My Fault by Zara Larsson</li>
 				<li>Uptown Funk by Bruno Mars</li>
+				
+				<!-- <li>Cry Me a River by Justin Timberlake</li>
+				<li>Halo by Beyonce</li>
+				<li>Single Ladies by Beyonce</li>
+				<li>It Aint My Fault by Zara Larsson</li> -->
 				</ul>		
 		</div>
 		
