--- a/public/peppertablet/index.html
+++ b/public/peppertablet/index.html
@@ -24,8 +24,8 @@
 <!-- 	<li><a href="#youtube" class="link" rel="youtube">Youtube </a></li> -->
 	<li><a href="#quiz" class="link" rel="quiz">Quiz</a></li>
 	<!-- <li><a href="#learn"  class="link" rel="learn">Learn more</a></li> -->
-	
-		<li><a href="#questions" class="link" rel="questions">Questions</a></li>
+<!-- 	
+		<li><a href="#questions" class="link" rel="questions">Questions</a></li> -->
 		<li><a href="#story" class="link" rel="story">Story</a></li>
 
 </ul>
@@ -40,7 +40,7 @@
 			<ul>
 				<li>Listen to some music</a></li>
 				<li>Do a quiz</a></li>
-				<li>Ask some questions</a></li>
+				<!-- <li>Ask some questions</a></li> -->
 				<li>Listen to a story about the artist</a></li>
 				
 			</ul>		
