bigger text, no inital scale stuff

--- a/public/peppertablet/index.html
+++ b/public/peppertablet/index.html
@@ -5,7 +5,7 @@
 <meta name="description" content="New Project" />
   <meta name="keywords" content="New Project" />
   <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <!-- <meta name="viewport" content="width=device-width, initial-scale=1"> -->
 <title>Pepper Tablet</title>
 <script src="https://code.jquery.com/jquery-1.11.1.min.js"></script>
 <link href="css.css" rel="stylesheet" type="text/css" />
@@ -34,34 +34,13 @@
 <div id="content">
 	
 	<div class='box' id='startMenu'>  
-		<h1>Suggested Topics</h1>
-		<h2>Lets talk about music! <br> What do you want to do?</h2>
-		<div>
-			<ul>
-				<li>Listen to some music</a></li>
-				<li>Do a quiz</a></li>
-				<!-- <li>Ask some questions</a></li> -->
-				<li>Listen to a story about the artist</a></li>
-				
-			</ul>		
-		</div>
+		
+		<h1>Listen to some music<br> <br>  Do a quiz<br> <br> Listen to a story about <br> an artist</h1>
+
 	</div>
 	<div class='box' id='listen'> 
-		<h1>Listen To Music</h1>
-		<h2>What song do you want to hear?</h2>
-		<div>
-			<ul>
-				
-				<li>Lush life by Zara Larsson</li>
-				<li>Uptown Funk by Bruno Mars</li>
-				<li>No Money by Galantis</li>
-				<!-- <li>Cry Me a River by Justin Timberlake</li>
-				<li>Halo by Beyonce</li>
-				<li>Single Ladies by Beyonce</li>
-				<li>It Aint My Fault by Zara Larsson</li> -->
-				</ul>		
-		</div>
-		
+		<h1>Lush life by Zara Larsson <br>  <br> Uptown Funk by Bruno Mars <br> <br>  No Money by Galantis</h1>
+
 		
 	</div>
 	<div class='box' id='youtube'> 
@@ -71,10 +50,8 @@
 	</div>
 	<div class='box' id='quiz'> 
 		<h1>The Quiz </h1>
-		<ul>
-				<li>If you want to do something else, just say stop,<br> to stop the quiz.</li>
-				<li>You can always ask me what your score is.</li>
-			</ul>	
+		<h2>Say Stop to do something else <br><br> Say Score to get your score</h2>
+		
 		<div style="display:none;" ><h2>Your score: <label id="score">0</label></h2></div>
 		
 		
@@ -102,16 +79,9 @@
 		</div>
 	</div>
 	<div class='box' id='story'> 
-		<h1>Story</h1>
-		<h2>What topic do you want to learn more <br> about?</h2>
-		<div>
-			<ul>
-				<li>Early Life</li>
-				<li>Career</li>
-				<li>Artistry</li>
-				<li>Albums</li>
-			</ul>		
-		</div>
+
+		<h2>Early Life <br><br> Career         <br><br>    Artistry         <br><br>   Albums</h2>
+		
 	</div>
 	
 </div>
