--- a/public/peppertablet/index.html
+++ b/public/peppertablet/index.html
@@ -19,10 +19,11 @@
 <div id="sidebar">
 <ul>
 	<li style=" visibility: hidden;"  ></li>
-	<a href="#startMenu"  style= visibility: hidden;" class="link menutop" rel="startMenu">Suggested Topics</a>
+	<a href="#startMenu"  style= visibility: hidden;" class="link menutop" rel="startMenu">Available Modes </a>
+	<li><a href="#quiz" class="link" rel="quiz">Quiz</a></li>
 	<li><a href="#listen" class="link" rel="listen">Song </a></li>
 <!-- 	<li><a href="#youtube" class="link" rel="youtube">Youtube </a></li> -->
-	<li><a href="#quiz" class="link" rel="quiz">Quiz</a></li>
+	
 	<!-- <li><a href="#learn"  class="link" rel="learn">Learn more</a></li> -->
 <!-- 	
 		<li><a href="#questions" class="link" rel="questions">Questions</a></li> -->
@@ -39,7 +40,7 @@
 
 	</div>
 	<div class='box' id='listen'> 
-		<h1>Lush life by Zara Larsson <br>  <br> Uptown Funk by Bruno Mars <br> <br>  No Money by Galantis</h1>
+		<h1>Lush life <br>by Zara Larsson <br>  <br> Uptown Funk<br> by Bruno Mars <br> <br>  No Money<br> by Galantis</h1>
 
 		
 	</div>
